syntax = "proto3";

package spine.test.annotator;

import "spine/options.proto";

option java_multiple_files = true;

message ExperimentalField {
    string value = 1 [(internal) = true];
}
