syntax = "proto3";

package spine.gradle.compiler;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.gradle.compiler";
option java_outer_classname = "AnnotatorTestProto";
option java_multiple_files = true;

message InternalMessage {
    option (internal_type) = true;
}

message BetaMessage {
    option (beta_type) = true;
}

message ExperimentalMessage {
    option (experimental_type) = true;
}

message SpiMessage {
    option (SPI_type) = true;
}

service SpiService {
    option (SPI_service) = true;
}

message Scaffolding {

    string experiment = 1 [(experimental) = true];

    string latin_letter = 2 [(beta) = true];

    string hidden = 3 [(internal) = true];
}
